traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:7: error: not found: value ecritMesage
      cpt += 1; ecritMesage(cpt);
                ^