traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var cpt: Int = 0
  while (getMondeHauteur() != getY() && getMondeLargeur() != getY()) {
    if (getY() == getMondeHauteur()) {
      setPos(getX()+1, getY()-7)
      cpt += 1; ecritMessage(cpt);
    } else {
      cpt += 1; ecritMesage(cpt);
      setPos(getX()+1, getY()+1)
    }   
  }
}